--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.7'
 volumes:
     postgres:
     pgadmin:
+
 services:
   database:
     container_name: voting_db
@@ -17,4 +18,37 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    networks:
+      - optic_net
+  front:
+    build:
+      context: ./frontend
+    ports:
+      - "3000:3000"
+    container_name: frontend
+    stdin_open: true
+    env_file:
+      - ./frontend/.env.docker
+    volumes:
+       - ./frontend:/usr/src/app/front
+       - /usr/src/app/front/node_modules
+    networks:
+      - optic_net
+    depends_on:
+      - api
+  api:
+    build:
+      context: ./backend
+    env_file:
+      - ./backend/.env.docker
+    depends_on:
+      - database
+    command: ./startup.sh
+    ports:
+      - "3333:3333"
+    networks:
+      - optic_net
+networks:
+  optic_net:
+    driver: "bridge"
     
