--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,6 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.13",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
         "axios": "^1.3.4",
         "react": "^18.2.0",
         "react-datepicker": "^4.10.0",
@@ -23,7 +19,15 @@
         "recoil-persist": "^4.2.0",
         "typescript": "^4.4.2",
         "web-vitals": "^2.1.0",
-        "web3": "^1.8.2"
+        "@chakra-ui/react": "^2.5.1",
+        "react-router-dom": "^6.8.1",
+        "ethers": "^5.4.7",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "framer-motion": "^9.1.6",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
+        "sort-by": "^1.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -51,6 +55,10 @@
     },
     "devDependencies": {
         "@types/react-datepicker": "^4.8.0",
-        "@types/react-datetime-picker": "^3.4.1"
+        "@types/react-datetime-picker": "^3.4.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0"
     }
 }
