--- a/frontend/.env.docker
+++ b/frontend/.env.docker
@@ -1,2 +1,2 @@
 REACT_APP_BACKEND_URL=http://localhost:3333
-REACT_APP_VOTING_ADDRESS=0x56AE002904497dbb7C99a96543b95DBb7e01b356
+REACT_APP_VOTING_ADDRESS=%%VOTING_CONTRACT_ADDRESS%%
